# Chico

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
App/: __init__.py  main.py
App/auto/: __init__.py
App/auto/bot/: __init__.py  navegador.py
App/auto/functions/: __init__.py  impressão.py  navegação.py  normalizar.py
App/auto/info/misc/: credenciais.py  parâmetroswebdriver.py
App/auto/info/sites/: propriedades.py  siap.py  sige.py
App/auto/tasks/: __init__.py  downloads.py  gerenciaracessos.py  presenciamento.py  tarefas.py
App/backend/export/: __init__.py  exportação.py  exportaçãoxlsx.py
App/backend/query/workflow/: __init__.py  consulta.py
App/backend/utils/: debug.py
App/frontend/: __init__.py
App/frontend/functions/: obterdiretório.py
App/frontend/screens/: __init__.py  janelaprincipal.py  telabot.py  telaconsulta.py  telainicial.py
App/frontend/screens/utils/: alternador_de_telas.py
App/frontend/widgets/: __init__.py  input.py  texto.py
app/: __init__.py  __metadata__.py  main.py
app/auto/: __init__.py  bot.py  interface_testes.py  teste.py
app/auto/bot/: __init__.py  navegador.py
app/auto/data/dataclasses/: credenciais.py  navegabilidade.py  propriedadesweb.py  siteconfig.py
app/auto/data/misc/: __init__.py  credenciais.py  escola.py  parâmetroswebdriver.py
app/auto/functions/: __init__.py  funções.py  impressão.py  navegação.py  navegaçãoweb.py  normalizar.py
app/auto/info/: __init__.py
app/auto/tasks/: __init__.py  bkp.py  coletanotas.py  consultadiasletivos.py  credenciador.py  downloads.py  frequenciador.py  gerenciadordecredenciais.py  gerenciadordefrequência.py  gerenciaracessos.py  obtençãodemodulação.py  presenciamento.py  registrotasks.py  scrapingsige.py  sondagem.py  tarefas.py  tasker.py  taskloader.py  taskregistry.py
app/backend/export/: exportação.py  exportaçãocsv.py  exportaçãoxlsx.py
app/backend/query/: __init__.py
app/backend/utils/: __init__.py  filtro.py
app/config/: __init__.py  __metadata__.py  app_config.py  env_config.py  functions.py  parâmetros.py
app/config/classes/: cpf.py  credenciais.py  datareal.py  período.py  telefone.py
app/config/getters/: dias_letivos.py  modulação_servidor.py  prévias.py  séries_letivas.py  tempo.py
app/config/parâmetros/: __init__.py  appdataloader.py  estruturadeseleção.py  gerenciadordeestado.py  iniciadorconfiguraçãobase.py  parâmetros.py
app/config/settings/: env_config.py  functions.py
app/config/tipos/: CPF.py  __init__.py  cpf.py  datareal.py  telefone.py  tipos.py
app/core/: __init__.py
app/core/export/: __init__.py  exportação.py  exportaçãocsv.py  exportaçãoxlsx.py
app/core/frequency/: compiladordefaltas.py
app/core/query/: __init__.py  leitura.py
app/core/utils/: __init__.py  debug.py  filtro.py  geradordepastasestudantes.py  pastador.py
app/frontend/: __init__.py
app/frontend/screens/: __init__.py  janelaprincipal.py  telabot.py  telaconsulta.py  telainicial.py
app/frontend/widgets/: dropdown.py
app/ui/: __init__.py  registry.py
app/ui/config/: cabeçalhos.py  carregadordetelas.py  dimensionamento.py  parâmetros.py  registrodetelas.py  registrotelas.py
app/ui/functions/: alternadordetelas.py  desfazimento.py  navegaçãoui.py  pesquisa_diretório.py  pesquisadiretório.py
app/ui/screens/: __init__.py  janela.py  janelaprincipal.py  tela_consulta.py  tela_estatísticas.py  tela_frequência.py  tela_inicial.py  telabot.py  telabot_credenciais.py  telabot_sige.py  telaconsulta.py  telainicial.py
app/ui/utils/: alternador_de_telas.py  prévias.py
app/ui/widgets/: __init__.py  botão.py  caixa_data.py  checkbox.py  dropdown.py  input.py  modelos_widgets.py  texto.py
app/utils/: env_config.py
sketches/: _credenciador.py  ajustarimagens.py  analisedesempenhopedagógico.py  arquivo_fisico.py  bkp.py  compilarmodulações.py  disciplinas.py  pastas_alunos.py  pastas_estudantes.py  renomear_fotos.py  reorganizadordepastas.py  sistemapresença.py  variáveis.py
sketches/frequenciadorprof_reconstrução/: calendário.py  frequenciadorprof.py  processadordisciplina.py  q.py  reconstruçãoprof.py
sketches/navegaçãoweb_/: __init__.py  navegaçãoweb.py  navegaçãowebmobilidade.py  navegaçãowebscraping.py  navegaçãowebsiap.py  navegaçãowebsige.py  tipagemnavegação.py
tests/: clicar.py  comparar.py  consulta.py  lista.py  pastas_alunos.py  pastas_alunos2.py  spam.py  test.py  teste.py  tst.py  uni.py
tests/resultados/: Compilado de Faltas.csv  Compilado de Faltas.xlsx  listas.csv  pastas_com_caixas.xlsx  pastas_sem_caixa_detalhado.xlsx  strings.csv
tests/temp/: q.py  reconstruçãoprof.py
(+220 files in other folders)
