[project]
name = "Chico"
version = "BETA"
description = "Chico é um utilitário para atividades administrativas do cotidiano escolar."
authors = [
    {name = "Livíssima ", email = "livianevesgeo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Secretárias e auxiliares",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "customtkinter==5.2.2",
    "pandas==2.3.2",
    "platformdirs==4.3.8",
    "python-dotenv==1.1.1",
    "python_dateutil==2.9.0.post0",
    "screeninfo==0.8.1",
    "selenium==4.35.0",

    # Adicione outras dependências aqui
]

[project.optional-dependencies]
dev = [
#    "pytest>=7.0.0",
#    "black>=23.0.0",
#    "flake8>=6.0.0",
#    "isort>=5.12.0",
]

[build-system]
requires = []
#build-core = "setuptools.build_meta"

# Configurações para ferramentas adicionais
[tool.black]
#line-length = 88
#target-version = ['py38']

[tool.isort]
#profile = "black"

[tool.pytest.ini_options]
#testpaths = ["tests"]
#python_files = "test_*.py"

## Se estiver usando FastAPI ou similar
#[tool.uvicorn]
#app = "app.inicial:app"
#host = "0.0.0.0"
#port = 8000
#reload = true

# Para empacotamento e distribuição
[tool.setuptools]
#packages = {find = {where = ["app"]}}

[tool.setuptools.package-data]
#"*" = ["*.txt", "*.json", "*.yaml", "*.yml"]