[project]
name = "Chico"
version = "BETA"
description = "Chico é um utilitário para atividades administrativas do cotidiano escolar."
authors = [
    {name = "Livíssima ", email = "livianevesgeo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Secretárias e auxiliares",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "et-xmlfile==2.0.0",
    "openpyxl==3.1.5",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "tzdata==2026.2",
    "attrs==26.1.0",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "h11==0.16.0",
    "idna==3.13",
    "outcome==1.3.0.post0",
    "pycparser==3.0",
    "pysocks==1.7.1",
    "selenium==4.43.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio==0.33.0",
    "trio-websocket==0.12.2",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "websocket-client==1.9.0",
    "wsproto==1.3.2",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "packaging==26.1",
    "screeninfo==0.8.1",
    "dotenv==0.9.9",
    "python-dotenv==1.2.2",
    "xlsxwriter==3.2.9",
    "charset_normalizer==3.4.7",
    "requests==2.33.1"
]

[project.optional-dependencies]
dev = [
#    "pytest>=7.0.0",
#    "black>=23.0.0",
#    "flake8>=6.0.0",
#    "isort>=5.12.0",
]

[build-system]
requires = []
#build-core = "setuptools.build_meta"

# Configurações para ferramentas adicionais
[tool.black]
#line-length = 88
#target-version = ['py38']

[tool.isort]
#profile = "black"

[tool.pytest.ini_options]
#testpaths = ["tests"]
#python_files = "test_*.py"

## Se estiver usando FastAPI ou similar
#[tool.uvicorn]
#app = "app.inicial:app"
#host = "0.0.0.0"
#port = 8000
#reload = true

# Para empacotamento e distribuição
[tool.setuptools]
#packages = {find = {where = ["app"]}}

[tool.setuptools.package-data]
#"*" = ["*.txt", "*.json", "*.yaml", "*.yml"]