[project]
name = "Chico"
version = "0.1.0"
description = "Chico é um utilitário para atividades administrativas do cotidiano escolar."
authors = [
    {name = "Livissima", email = "livianevesgeo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Secretárias e auxiliares",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openpyxl>=3.1.5",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "selenium>=4.10.0",
    "customtkinter>=5.2.0",
    "screeninfo>=0.8.1",
    "python-dotenv>=1.0.0",
    "xlsxwriter>=3.1.0",
    "requests>=2.31.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["*.json", "*.png", "*.ico", "*.yaml"]